[package]
name = "ctclient"
description = "Certificate Transparency Log client for monitoring and gossiping"
license = "MIT"
repository = "https://github.com/micromaomao/ctclient"
version = "0.3.0"
authors = ["Mao Wtm <m@maowtm.org>"]
edition = "2018"
documentation = "https://docs.rs/ctclient"

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"

[dependencies]
reqwest = { version = "0.10.4", default-features = false, features = ["blocking", "native-tls", "gzip"] }
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
base64 = "0.12.1"
openssl = "0.10.24"
log = "0.4.7"

[dev-dependencies]
# for the example binary
env_logger = "0.7.1"
rusqlite = "0.23.1"
